# hackaton_ethereally-

./: Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml
src/: __main__.py  settings.py
src/database/: custom_types.py  db_utils.py  models.py
src/filters/general/: access_role.py  private.py
src/handlers/supervisor/: events.py  menu.py  routes.py
src/handlers/user/: events.py  faq.py  menu.py  poll.py  rating.py  routes.py
src/middlewares/admin/: access_rights.py
src/middlewares/general/: callback.py  db_middleware.py  throttling.py
src/templates/: keyboards.py  states.py  texts.py
src/typings/: classes.py  consts.py  enums.py
src/utils/: ai.py  bot_commands.py  datetime_utils.py  helpers.py  loguru_handler.py  message.py
